--- a/experiments/configs/cub_mixcem_incomplete.yaml
+++ b/experiments/configs/cub_mixcem_incomplete.yaml
@@ -2436,28 +2436,34 @@ runs:
 
 
 
-
   - architecture: 'CertificateConceptEmbeddingModel'
-    run_name: "CertificateCEM_{selection_mode}_{pooling_mode}_{calibrate_global_logits}_{calibrate_dynamic_logits}_g_ood_{global_ood_prob}_emb_{emb_size}_ood_{ood_dropout_prob}_mp_{mixed_probs}_creg_{contrastive_reg}_hs_{hard_eval_selection}_cal_epochs_{calibration_epochs}_cw_{certificate_loss_weight}_ss_{selection_sample}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    run_name: "CertificateCEM_{selection_mode}_{pooling_mode}_t_{temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_gr_{global_temp_reg}_g_ood_{global_ood_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "CertificateCEM_{selection_mode}_{pooling_mode}_t_{temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_gr_{global_temp_reg}_g_ood_{global_ood_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
-    concept_loss_weight: [1]
+    concept_loss_weight: [1, 10]
     emb_size: [16]
     temperature: [10, 1]
     shared_emb_generator: True
 
     # OOD stuff
-    certificate_loss_weight: [0] #, 0.1]
-    ood_dropout_prob: [0] #, 0.75, 0.5, 0]
-    global_ood_prob: [0.5, 0.75, 0.25, 0] #, 0.75, 0.5, 0]
-    pooling_mode: ['individual_scores']
+    certificate_loss_weight: [0]
+    ood_dropout_prob: [0]
+    global_ood_prob: [0.5, 0]
+    pooling_mode: ['iss']
     selection_mode: ['max_class_confidence']
-    hard_eval_selection: [0.5, null, 0.05, 0.95] #0.1, 0.5, 0.05] #, -0.999, 0.999]
+    hard_eval_selection: [null, 0.5, 0.05, 0.95]
     selection_sample: [False]
-    calibration_epochs: 30
+    calibration_epochs: [30, 0]
     mixed_probs: True
     contrastive_reg: 0
     calibrate_dynamic_logits: True
     calibrate_global_logits: True
+    init_dyn_temps: 1.5
+    init_global_temps: 0.5
+    global_temp_reg: 0
+    inference_dyn_prob: False
+    learnable_temps: False
+    finetune_with_val: True
 
     ###############################################################################################
 
@@ -2473,6 +2479,66 @@ runs:
     gradient_clip_val: 100
     intervention_weight: 0.1
 
+    grid_variables:
+      - concept_loss_weight
+      - training_intervention_prob
+      - intervention_task_discount
+      - emb_size
+      - certificate_loss_weight
+      - ood_dropout_prob
+      - selection_sample
+      - pooling_mode
+      - global_ood_prob
+      - temperature
+      - selection_mode
+      - calibration_epochs
+      - hard_eval_selection
+    grid_search_mode: exhaustive
+
+
+
+  - architecture: 'CertificateConceptEmbeddingModel'
+    run_name: "CertificateCEM_{selection_mode}_{pooling_mode}_t_{temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_gr_{global_temp_reg}_g_ood_{global_ood_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "CertificateCEM_{selection_mode}_{pooling_mode}_t_{temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_gr_{global_temp_reg}_g_ood_{global_ood_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1, 10]
+    emb_size: [16]
+    temperature: [10, 1]
+    shared_emb_generator: True
+
+    # OOD stuff
+    certificate_loss_weight: [0]
+    ood_dropout_prob: [0]
+    global_ood_prob: [0.5, 0]
+    pooling_mode: ['iss']
+    selection_mode: ['max_class_confidence']
+    hard_eval_selection: [null, 0.5, 0.05, 0.95]
+    selection_sample: [False]
+    calibration_epochs: [30, 0]
+    mixed_probs: True
+    contrastive_reg: 0
+    calibrate_dynamic_logits: True
+    calibrate_global_logits: True
+    init_dyn_temps: 1
+    init_global_temps: 1
+    global_temp_reg: 0
+    inference_dyn_prob: False
+    learnable_temps: False
+    finetune_with_val: True
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1.1]
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: [128, 128, 64, 64]
+    max_horizon: 6
+    horizon_rate: 1.005
+    gradient_clip_val: 100
+    intervention_weight: 0.1
 
     grid_variables:
       - concept_loss_weight
@@ -2481,13 +2547,71 @@ runs:
       - emb_size
       - certificate_loss_weight
       - ood_dropout_prob
-      - selection_mode
-      - hard_eval_selection
       - selection_sample
       - pooling_mode
       - global_ood_prob
       - temperature
+      - selection_mode
+      - calibration_epochs
+      - hard_eval_selection
     grid_search_mode: exhaustive
+
+
+  # WORKING!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  # - architecture: 'CertificateConceptEmbeddingModel'
+  #   run_name: "CertificateCEM_{selection_mode}_{pooling_mode}_{calibrate_global_logits}_{calibrate_dynamic_logits}_g_ood_{global_ood_prob}_emb_{emb_size}_ood_{ood_dropout_prob}_mp_{mixed_probs}_creg_{contrastive_reg}_hs_{hard_eval_selection}_cal_epochs_{calibration_epochs}_cw_{certificate_loss_weight}_ss_{selection_sample}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+  #   concept_loss_weight: [1, 10]
+  #   emb_size: [16]
+  #   temperature: [10, 1]
+  #   shared_emb_generator: True
+
+  #   # OOD stuff
+  #   certificate_loss_weight: [0] #, 0.1]
+  #   ood_dropout_prob: [0] #, 0.75, 0.5, 0]
+  #   global_ood_prob: [0.5, 0.75, 0.25, 0] #, 0.75, 0.5, 0]
+  #   pooling_mode: ['individual_scores', 'iss']
+  #   selection_mode: ['max_class_confidence']
+  #   hard_eval_selection: [0.5, null, 0.05, 0.95] #0.1, 0.5, 0.05] #, -0.999, 0.999]
+  #   selection_sample: [False]
+  #   calibration_epochs: 30
+  #   mixed_probs: True
+  #   contrastive_reg: 0
+  #   calibrate_dynamic_logits: True
+  #   calibrate_global_logits: True
+
+  #   ###############################################################################################
+
+  #   # IntCEM stuff
+  #   embedding_activation: null
+  #   training_intervention_prob: [0.25]
+  #   intervention_task_discount: [1.1]
+  #   use_concept_groups: True
+  #   int_model_use_bn: True
+  #   int_model_layers: [128, 128, 64, 64]
+  #   max_horizon: 6
+  #   horizon_rate: 1.005
+  #   gradient_clip_val: 100
+  #   intervention_weight: 0.1
+
+
+  #   grid_variables:
+  #     - concept_loss_weight
+  #     - training_intervention_prob
+  #     - intervention_task_discount
+  #     - emb_size
+  #     - certificate_loss_weight
+  #     - ood_dropout_prob
+  #     - hard_eval_selection
+  #     - selection_sample
+  #     - pooling_mode
+  #     - global_ood_prob
+  #     - temperature
+  #     - selection_mode
+  #   grid_search_mode: exhaustive
+
+
+
 
   # - architecture: 'CertificateConceptEmbeddingModel'
   #   run_name: "CertificateCEM_{selection_mode}_{pooling_mode}_{calibrate_global_logits}_{calibrate_dynamic_logits}_g_ood_{global_ood_prob}_emb_{emb_size}_ood_{ood_dropout_prob}_mp_{mixed_probs}_creg_{contrastive_reg}_hs_{hard_eval_selection}_cal_epochs_{calibration_epochs}_cw_{certificate_loss_weight}_ss_{selection_sample}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
