--- a/experiments/configs/cub_mixcem_incomplete.yaml
+++ b/experiments/configs/cub_mixcem_incomplete.yaml
@@ -2504,7 +2504,7 @@ runs:
 
   - architecture: 'CertificateConceptEmbeddingModel'
     run_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
     concept_loss_weight: [1]
     emb_size: [16]
@@ -2526,7 +2526,7 @@ runs:
     contrastive_reg: 0
     calibrate_dynamic_logits: True
     calibrate_global_logits: True
-    finetune_with_val: [True]
+    finetune_with_val: [True, False]
     init_dyn_temps: 1.5
     init_global_temps: 0.5
     global_temp_reg: 0
@@ -2574,13 +2574,14 @@ runs:
     grid_search_mode: exhaustive
 
 
+  # Make the original temperature symmetric but warm up the global model
   - architecture: 'CertificateConceptEmbeddingModel'
     run_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
     concept_loss_weight: [1]
     emb_size: [16]
-    temperature: [10, 1]
+    temperature: [10]
     max_temperature: 10
     shared_emb_generator: True
 
@@ -2594,6 +2595,301 @@ runs:
     hard_eval_selection: [null, 0.5]
     selection_sample: [False]
     calibration_epochs: [0, 30]
+    mixed_probs: True
+    contrastive_reg: 0
+    calibrate_dynamic_logits: True
+    calibrate_global_logits: True
+    finetune_with_val: [True]
+    init_dyn_temps: 1
+    init_global_temps: 1
+    global_temp_reg: 0
+    inference_dyn_prob: False
+    learnable_temps: False
+    positive_calibration: False
+    class_wise_temperature: False
+    separate_calibration: False
+    freeze_global_components: [False]
+    global_epochs: 30
+    print_eval_only: True
+    counter_limit: 0
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1.1]
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: [128, 128, 64, 64]
+    max_horizon: 6
+    horizon_rate: 1.005
+    intervention_weight: [0.1]
+
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - emb_size
+      - certificate_loss_weight
+      - ood_dropout_prob
+      - selection_mode
+      - hard_eval_selection
+      - selection_sample
+      - global_ood_prob
+      - entire_global_prob
+      - temperature
+      - finetune_with_val
+      - calibration_epochs
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - freeze_global_components
+    grid_search_mode: exhaustive
+
+
+  # Make the original temperature symmetric but warm up the global model but with temperature 1
+  - architecture: 'CertificateConceptEmbeddingModel'
+    run_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    temperature: [1]
+    max_temperature: 1
+    shared_emb_generator: True
+
+    # OOD stuff
+    certificate_loss_weight: [0]
+    ood_dropout_prob: [0]
+    global_ood_prob: [0.5]
+    entire_global_prob: [0]
+    pooling_mode: ['iss']
+    selection_mode: ['max_class_confidence']
+    hard_eval_selection: [null, 0.5]
+    selection_sample: [False]
+    calibration_epochs: [0, 30]
+    mixed_probs: True
+    contrastive_reg: 0
+    calibrate_dynamic_logits: True
+    calibrate_global_logits: True
+    finetune_with_val: [True]
+    init_dyn_temps: 1
+    init_global_temps: 1
+    global_temp_reg: 0
+    inference_dyn_prob: False
+    learnable_temps: False
+    positive_calibration: False
+    class_wise_temperature: False
+    separate_calibration: False
+    freeze_global_components: [False]
+    global_epochs: 30
+    print_eval_only: True
+    counter_limit: 0
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1.1]
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: [128, 128, 64, 64]
+    max_horizon: 6
+    horizon_rate: 1.005
+    intervention_weight: [0.1]
+
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - emb_size
+      - certificate_loss_weight
+      - ood_dropout_prob
+      - selection_mode
+      - hard_eval_selection
+      - selection_sample
+      - global_ood_prob
+      - entire_global_prob
+      - temperature
+      - finetune_with_val
+      - calibration_epochs
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - freeze_global_components
+    grid_search_mode: exhaustive
+
+
+
+  # Make the original temperature symmetric but warm up the global model but with temperature 1
+  - architecture: 'CertificateConceptEmbeddingModel'
+    run_name: "ConceptMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "ConceptMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    temperature: [1]
+    max_temperature: 1
+    shared_emb_generator: True
+
+    # OOD stuff
+    certificate_loss_weight: [0]
+    ood_dropout_prob: [0]
+    global_ood_prob: [0.5]
+    entire_global_prob: [0]
+    pooling_mode: ['iss']
+    selection_mode: ['max_concept_confidence']
+    hard_eval_selection: [null, 0.5]
+    selection_sample: [False]
+    calibration_epochs: [0, 30]
+    mixed_probs: True
+    contrastive_reg: 0
+    calibrate_dynamic_logits: True
+    calibrate_global_logits: True
+    finetune_with_val: [True]
+    init_dyn_temps: 1
+    init_global_temps: 1
+    global_temp_reg: 0
+    inference_dyn_prob: False
+    learnable_temps: False
+    positive_calibration: False
+    class_wise_temperature: False
+    separate_calibration: False
+    freeze_global_components: [False]
+    global_epochs: 5
+    print_eval_only: True
+    counter_limit: 0
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1.1]
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: [128, 128, 64, 64]
+    max_horizon: 6
+    horizon_rate: 1.005
+    intervention_weight: [0.1]
+
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - emb_size
+      - certificate_loss_weight
+      - ood_dropout_prob
+      - selection_mode
+      - hard_eval_selection
+      - selection_sample
+      - global_ood_prob
+      - entire_global_prob
+      - temperature
+      - finetune_with_val
+      - calibration_epochs
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - freeze_global_components
+    grid_search_mode: exhaustive
+
+
+  # Let's see if with a globally pre-trained model, calibration, and random triggering of selection, we can get rid of the asymmetric temperature
+  - architecture: 'CertificateConceptEmbeddingModel'
+    run_name: "NewMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_rs_{random_selection_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "NewMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_rs_{random_selection_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    temperature: [1]
+    max_temperature: 1
+    shared_emb_generator: True
+
+    # OOD stuff
+    certificate_loss_weight: [0]
+    ood_dropout_prob: [0]
+    global_ood_prob: [0]
+    entire_global_prob: [0]
+    random_selection_prob: [0.5]
+    pooling_mode: ['iss']
+    selection_mode: ['max_class_confidence']
+    hard_eval_selection: [null, 0.5]
+    selection_sample: [False]
+    calibration_epochs: [0, 30]
+    mixed_probs: True
+    contrastive_reg: 0
+    calibrate_dynamic_logits: True
+    calibrate_global_logits: True
+    finetune_with_val: [True]
+    init_dyn_temps: 1
+    init_global_temps: 1
+    global_temp_reg: 0
+    inference_dyn_prob: False
+    learnable_temps: False
+    positive_calibration: False
+    class_wise_temperature: False
+    separate_calibration: False
+    freeze_global_components: [False]
+    global_epochs: [50, 0, 5, 30]
+    print_eval_only: True
+    counter_limit: 0
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1.1]
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: [128, 128, 64, 64]
+    max_horizon: 6
+    horizon_rate: 1.005
+    intervention_weight: [0.1]
+
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - emb_size
+      - certificate_loss_weight
+      - ood_dropout_prob
+      - selection_mode
+      - selection_sample
+      - global_ood_prob
+      - entire_global_prob
+      - temperature
+      - finetune_with_val
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - freeze_global_components
+      - global_epochs
+      - random_selection_prob
+      - hard_eval_selection
+      - calibration_epochs
+    grid_search_mode: exhaustive
+
+  # Make the original temperature symmetric
+  - architecture: 'CertificateConceptEmbeddingModel'
+    run_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    temperature: [10]
+    max_temperature: 10
+    shared_emb_generator: True
+
+    # OOD stuff
+    certificate_loss_weight: [0]
+    ood_dropout_prob: [0]
+    global_ood_prob: [0.5]
+    entire_global_prob: [0]
+    pooling_mode: ['iss']
+    selection_mode: ['max_class_confidence']
+    hard_eval_selection: [null, 0.5]
+    selection_sample: [False]
+    calibration_epochs: [30]
     mixed_probs: True
     contrastive_reg: 0
     calibrate_dynamic_logits: True
@@ -2646,9 +2942,10 @@ runs:
     grid_search_mode: exhaustive
 
 
+
   - architecture: 'CertificateConceptEmbeddingModel'
     run_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "FinalMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
     concept_loss_weight: [1]
     emb_size: [16]
